--- a/components/sso/overlays/default/kustomization.yaml
+++ b/components/sso/overlays/default/kustomization.yaml
@@ -6,8 +6,8 @@ namespace: sso
 bases:
 - https://github.com/redhat-cop/gitops-catalog/rhsso/rhsso-standalone/overlays/default
 
-resources:
-- keycloak-migration-job.yaml
+#esources:
+#- keycloak-migration-job.yaml
 
 patchesJson6902:
   - path: patch-sso-statefulset.yaml
