add sso configuration

--- a/components/sso/overlays/default/kustomization.yaml
+++ b/components/sso/overlays/default/kustomization.yaml
@@ -5,7 +5,7 @@ namespace: sso
 
 bases:
 - https://github.com/redhat-cop/gitops-catalog/rhsso/rhsso-standalone/overlays/default
-
+- ../../rhsso-configuration
 #resources:
 #- keycloak-migration-job.yaml
 
