chang sso to operator

--- a/components/rhsso-configuration/kustomization.yaml
+++ b/components/rhsso-configuration/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 namespace: sso
 
 resources:
-  #- keycloak.yaml
+  - keycloak.yaml
   - clients.yaml
   - keycloak-realm.yaml
   - link.yaml
@@ -22,3 +22,11 @@ patches:
       kind: ConsoleLink
       name: rhsso
       namespace: sso  
+
+  - target:
+      kind: Route
+      name: sso
+    patch: |
+      - op: replace
+        path: /spec/host
+        value: "sso.${SUB_DOMAIN}"  
