--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -200,13 +200,13 @@ applications:
     source:
       path: components/kyverno-acm/base
 
-  authentication-sso:
+  authentication-sso-operator:
     annotations:
       argocd.argoproj.io/sync-wave: '31'
     destination:
       namespace: openshift-config
     source:
-      path: components/sso/overlays/default
+      path: components/rhsso-operator
 
   
   authentication-sso-configuration:
@@ -216,7 +216,6 @@ applications:
       namespace: openshift-config
     source:
       path: components/rhsso-configuration
-
 
   vault:
     annotations:
