--- a/components/rhsso-configuration/kustomization.yaml
+++ b/components/rhsso-configuration/kustomization.yaml
@@ -17,7 +17,7 @@ patches:
   - patch: |-
       - op: replace
         path: /spec/href
-        value: "https://sso.apps.${SUB_DOMAIN}"
+        value: "https://sso.${SUB_DOMAIN}"
     target:
       kind: ConsoleLink
       name: rhsso
