--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -217,6 +217,15 @@ applications:
     source:
       path: components/rhsso-configuration
 
+  
+  authentication-sso-oauth:
+    annotations:
+      argocd.argoproj.io/sync-wave: '33'
+    destination:
+      namespace: openshift-config
+    source:
+      path: components/oauth/overlays/sso
+
   vault:
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
