--- a/components/oauth/overlays/sso/kustomization.yaml
+++ b/components/oauth/overlays/sso/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
-
+ 
 resources:
+- ../../base
 - oauth-secret.yaml
 #- oidc-client-secret.yaml
 
