--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -219,6 +219,7 @@ applications:
 
   
   authentication-sso-oauth:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '33'
     destination:
