--- a/bootstrap/overlays/local.home/values.yaml
+++ b/bootstrap/overlays/local.home/values.yaml
@@ -31,6 +31,7 @@ projects:
 applications:
 
   lvm-operator:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '2'
     destination:
@@ -39,6 +40,7 @@ applications:
       path: clusters/overlays/local.home/components/lvm-operator
 
   acs-secured-cluster:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '21'
     destination:
@@ -65,6 +67,7 @@ applications:
       path: clusters/overlays/local.home/components/consolelinks
 
   certificates:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: "3"
     destination:
@@ -73,6 +76,7 @@ applications:
       path: clusters/overlays/local.home/components/certificates
 
   openshift-monitoring:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '11'
     destination:
@@ -81,6 +85,7 @@ applications:
       path: clusters/overlays/local.home/components/openshift-monitoring
 
   cost-management:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '21'
     destination:
@@ -102,18 +107,21 @@ applications:
         maxDuration: 3m
 
   node-config:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '99'
     source:
       path: clusters/overlays/local.home/components/node-config
 
   tekton-results:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '21'
     source:
       path: components/pipelines-operator/overlays/results
 
   rhtas-operator:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '21'
     destination:
@@ -123,6 +131,7 @@ applications:
 
 # Tenants
   gitops:
+    enabled: false
     project: cluster-config
     annotations:
       argocd.argoproj.io/sync-wave: '50'
@@ -130,6 +139,7 @@ applications:
       path: components/gitops-operator/overlays/shared
 
   tenants:
+    enabled: false
     project: cluster-config
     labels:
       repo: use-head
