local.hub sso kecloak client

--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -219,13 +219,12 @@ applications:
 
   
   authentication-sso-oauth:
-    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '33'
     destination:
       namespace: openshift-config
     source:
-      path: components/oauth/overlays/sso
+      path: clusters/overlays/local.hub/components/sso
 
   vault:
     annotations:
