--- a/components/pipelines-operator/overlays/chains/kustomization.yaml
+++ b/components/pipelines-operator/overlays/chains/kustomization.yaml
@@ -4,4 +4,4 @@ kind: Kustomization
 resources:
 - ../../base
 - openshift-pipelines-namespace.yaml
-- signing-cert-external.yaml
+#- signing-cert-external.yaml
