fix htpass sso for hub

--- a/clusters/overlays/local.hub/components/sso/kustomization.yaml
+++ b/clusters/overlays/local.hub/components/sso/kustomization.yaml
@@ -4,6 +4,10 @@ resources:
 - sso-ca.yaml
 #- oidc-client-secret.yaml
 
+components:
+#- ../sso
+- ../../../../../components/oauth/overlays/htpass
+
 patches:
   - patch: |-
       - op: add
