--- a/components/oauth/overlays/htpass/kustomization.yaml
+++ b/components/oauth/overlays/htpass/kustomization.yaml
@@ -1,5 +1,8 @@
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
+
 resources:
-  - ../../base
+  #- ../../base
   - htpass-secret.yaml
 
 #components:
