enable sso for spoke4

--- a/bootstrap/overlays/local.home/values.yaml
+++ b/bootstrap/overlays/local.home/values.yaml
@@ -30,6 +30,15 @@ projects:
 
 applications:
 
+
+  authentication-sso-oauth:
+    annotations:
+      argocd.argoproj.io/sync-wave: '33'
+    destination:
+      namespace: openshift-config
+    source:
+      path: clusters/overlays/local.home/components/sso
+
   lvm-operator:
     enabled: false
     annotations:
