--- a/components/rhsso-configuration/clients.yaml
+++ b/components/rhsso-configuration/clients.yaml
@@ -43,7 +43,7 @@ spec:
     #rootUrl: https://oauth-openshift.apps.prod.${PLATFORM_BASE_DOMAIN}/oauth2callback
     rootUrl: https://oauth-openshift.apps.spoke4.lab.loca/oauth2callback
     redirectUris:
-      - /oidckeycloak
+      - /keycloak
     clientAuthenticatorType: client-secret
     standardFlowEnabled: true
     directAccessGrantsEnabled: true
