--- a/clusters/overlays/local.home/components/console/console.yaml
+++ b/clusters/overlays/local.home/components/console/console.yaml
@@ -9,4 +9,4 @@ metadata:
   name: cluster
 spec:
   authentication:
-    logoutRedirect: https://sso.ocplab.com/realms/ocplab/protocol/openid-connect/logout?client_id=openshift&post_logout_redirect_uri=https://console-openshift-console.apps.spoke4.lab.local
+    logoutRedirect: https://keycloak-sso.apps.hub.lab.local/auth/realms/myorg/protocol/openid-connect/logout?client_id=openshift&post_logout_redirect_uri=https://console-openshift-console.apps.spoke4.lab.local
