--- a/clusters/overlays/local.hub/components/vault-config/keycloak-client-secret-vault.yaml
+++ b/clusters/overlays/local.hub/components/vault-config/keycloak-client-secret-vault.yaml
@@ -3,4 +3,6 @@ apiVersion: v1
 metadata:
   name: keycloak-client-secret-vault
 type: Opaque
-data: {}  
+data:
+  CLIENT_ID: dmF1bHQ=
+  CLIENT_SECRET: dmF1bHQtc2VjcmV0
