--- a/clusters/overlays/local.hub/components/vault-config/kustomization.yaml
+++ b/clusters/overlays/local.hub/components/vault-config/kustomization.yaml
@@ -8,8 +8,8 @@ resources:
   - ./keycloak-auth-engine-config.yaml
   - ./keycloak-auth-engine-role.yaml
   - ./keycloak-client-secret-vault.yaml
-  - ./patches-rbac.yaml
-  - ./patches.yaml
+  #- ./patches-rbac.yaml
+  #- ./patches.yaml
   - ./default-sa-token-secret.yaml
   - ./kubernetes-secret-engine-mount.yaml
   - ./kubernetes-secret-engine-config.yaml
