--- a/bootstrap/overlays/local/values.yaml
+++ b/bootstrap/overlays/local/values.yaml
@@ -85,6 +85,7 @@ applications:
           - /spec/rules
           
   web-terminal:
+     enabled: false
      annotations:
        argocd.argoproj.io/sync-wave: '21'
      destination:
