disable logout console for local.home

--- a/bootstrap/overlays/local.home/values.yaml
+++ b/bootstrap/overlays/local.home/values.yaml
@@ -69,6 +69,7 @@ applications:
       path: clusters/overlays/local.home/components/banner
 
   console:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '11'
     source:
