--- a/bootstrap/overlays/local.hub/values.yaml
+++ b/bootstrap/overlays/local.hub/values.yaml
@@ -24,7 +24,7 @@ applications:
       path: clusters/overlays/local.hub/components/node-config
 
   odf-operator:
-    enabled: true
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: '1'
     source:
