--- a/components/cert-manager-operator/issuers/letsencrypt-route53/base/kustomization.yaml
+++ b/components/cert-manager-operator/issuers/letsencrypt-route53/base/kustomization.yaml
@@ -6,6 +6,9 @@ commonAnnotations:
 
 resources:
 - cert-manager-ns.yaml
-- letsencrypt-aws-external.yaml
-- letsencrypt-staging-cluster-issuer.yaml
-- letsencrypt-prod-cluster-issuer.yaml
+- ca-secret.yaml
+- vault-service-cluster-issuer.yaml
+- vault-certs.yaml
+#- letsencrypt-aws-external.yaml
+#- letsencrypt-staging-cluster-issuer.yaml
+#- letsencrypt-prod-cluster-issuer.yaml
