enable vault pki engine 3

--- a/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-config.yaml
+++ b/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-config.yaml
@@ -14,7 +14,7 @@ spec:
   TTL: "8760h"
   type: intermediate
   privateKeyType: exported
-  country: CH
+  country: CN
   province: ZH
   locality: Zurich
   organization: Red Hat
