--- a/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-config.yaml
+++ b/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-config.yaml
@@ -23,3 +23,5 @@ spec:
   - https://vault.${SUB_DOMAIN}/v1/infra/clusters/${CLUSTER_NAME}/intermediate/ca
   crlDistributionPoints:
   - https://vault.${SUB_DOMAIN}/v1/infra/clusters/${CLUSTER_NAME}/intermediate/crl"
+  externalSignSecret:
+    name: signed-intermediate
