enable vault pki engine 5

--- a/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-config.yaml
+++ b/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-config.yaml
@@ -9,7 +9,7 @@ spec:
     role: vault-admin
     serviceAccount:
       name: default
-  path: /infra/clusters/${CLUSTER_NAME}/intermediate
+  path: /pki/intermediate
   commonName: vault.${SUB_DOMAIN}
   TTL: "8760h"
   type: intermediate
@@ -20,8 +20,8 @@ spec:
   organization: Red Hat
   maxPathLength: 1
   issuingCertificates:
-  - https://vault.${SUB_DOMAIN}/v1/infra/clusters/${CLUSTER_NAME}/intermediate/ca
+  - https://vault.${SUB_DOMAIN}/v1/pki/intermediate/ca
   crlDistributionPoints:
-  - https://vault.${SUB_DOMAIN}/v1/infra/clusters/${CLUSTER_NAME}/intermediate/crl"
+  - https://vault.${SUB_DOMAIN}/v1/pki/intermediate/crl"
   externalSignSecret:
     name: signed-intermediate
