--- a/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-mount.yaml
+++ b/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-mount.yaml
@@ -10,7 +10,7 @@ spec:
     serviceAccount:
       name: default          
   type: pki
-  path: /infra/clusters/${CLUSTER_NAME}
+  path: pki
   config:
      # 1 Year
      maxLeaseTTL: "8760h"
