enable vault pki engine 5

--- a/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-config.yaml
+++ b/clusters/overlays/local.hub/components/vault-config/vault-pki-engine-config.yaml
@@ -9,7 +9,7 @@ spec:
     role: vault-admin
     serviceAccount:
       name: default
-  path: /pki/intermediate
+  path: /pki
   commonName: vault.${SUB_DOMAIN}
   TTL: "8760h"
   type: intermediate
