--- a/components/cert-manager-operator/issuers/letsencrypt-route53/base/kustomization.yaml
+++ b/components/cert-manager-operator/issuers/letsencrypt-route53/base/kustomization.yaml
@@ -6,7 +6,7 @@ commonAnnotations:
 
 resources:
 - cert-manager-ns.yaml
-- ca-secret.yaml
+#- ca-secret.yaml
 - vault-service-cluster-issuer.yaml
 - vault-certs.yaml
 #- letsencrypt-aws-external.yaml
