--- a/clusters/overlays/local.hub/components/certificates/kustomization.yaml
+++ b/clusters/overlays/local.hub/components/certificates/kustomization.yaml
@@ -1,31 +1,31 @@
 resources:
 - ../../../../../components/certificates/base
 
-patches:
-  - patch: |-
-      - op: replace
-        path: /spec/servingCerts/namedCertificates/0/names/0
-        value: api.hub.lab.local
-    target:
-      group: config.openshift.io
-      kind: APIServer
-      name: cluster
-  - patch: |-
-      - op: replace
-        path: /spec/dnsNames
-        value:
-          - api.hub.lab.local
-    target:
-      kind: Certificate
-      name: openshift-api
-  - patch: |-
-      - op: replace
-        path: /spec/dnsNames
-        value:
-          - '*.apps.hub.lab.local'
-      - op: replace
-        path: /spec/commonName
-        value: '*.apps.hub.lab.local'
-    target:
-      kind: Certificate
-      name: openshift-wildcard
+#patches:
+#  - patch: |-
+#      - op: replace
+#        path: /spec/servingCerts/namedCertificates/0/names/0
+#        value: api.hub.lab.local
+#    target:
+#      group: config.openshift.io
+#      kind: APIServer
+#      name: cluster
+#  - patch: |-
+#      - op: replace
+#        path: /spec/dnsNames
+#        value:
+#          - api.hub.lab.local
+#    target:
+#      kind: Certificate
+#      name: openshift-api
+#  - patch: |-
+#      - op: replace
+#        path: /spec/dnsNames
+#        value:
+#          - '*.apps.hub.lab.local'
+#      - op: replace
+#        path: /spec/commonName
+#        value: '*.apps.hub.lab.local'
+#    target:
+#      kind: Certificate
+#      name: openshift-wildcard
