--- a/components/certificates/base/openshift-wildcard-certificate.yaml
+++ b/components/certificates/base/openshift-wildcard-certificate.yaml
@@ -6,6 +6,8 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: '0'
 spec:
+  duration: 1h
+  renewBefore: 55m  
   secretName: openshift-wildcard-certificate
   issuerRef:
     name: vault-service
