--- a/components/certificates/base/kustomization.yaml
+++ b/components/certificates/base/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - openshift-api-certificate.yaml
   - openshift-wildcard-certificate.yaml
   #- apiserver.yaml
-  #- ingresscontroller.yaml
+  - ingresscontroller.yaml
