--- a/bootstrap/overlays/local.hub/kustomization.yaml
+++ b/bootstrap/overlays/local.hub/kustomization.yaml
@@ -1,12 +1,21 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+helmGlobals:
+  chartHome: ./charts
+
 helmCharts:
-- name: argocd-app-of-app
-  version: 0.3.0
-  repo: https://gnunn-gitops.github.io/helm-charts
+- name: argocd-app-of-app=
   valuesFile: values.yaml
   namespace: openshift-gitops
+
+
+#helmCharts:
+#- name: argocd-app-of-app
+#  version: 0.3.0
+#  repo: https://gnunn-gitops.github.io/helm-charts
+#  valuesFile: values.yaml
+#  namespace: openshift-gitops
 
 resources:
 - ../local
