--- a/bootstrap/base/kustomization.yaml
+++ b/bootstrap/base/kustomization.yaml
@@ -1,10 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-helmGlobals:
-  chartHome: ./charts
-
 helmCharts:
 - name: argocd-app-of-app
+  version: 0.4.1
+  repo: https://aplphago.github.io/helm-charts/
   valuesFile: values.yaml
   namespace: openshift-gitops
