custom api certificate

--- a/components/certificates/base/apiserver.yaml
+++ b/components/certificates/base/apiserver.yaml
@@ -6,6 +6,8 @@ metadata:
     argocd.argoproj.io/sync-wave: "1"
     argocd.argoproj.io/sync-options: Validate=false,ServerSideApply=true
 spec:
+  audit:
+    profile: Default
   servingCerts:
     namedCertificates:
     - names:
