--- a/components/certificates/base/kustomization.yaml
+++ b/components/certificates/base/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - openshift-api-certificate.yaml
   - openshift-wildcard-certificate.yaml
-  #- apiserver.yaml
+  - apiserver.yaml
   - ingresscontroller.yaml
