--- a/clusters/overlays/local.hub/components/certificates/kustomization.yaml
+++ b/clusters/overlays/local.hub/components/certificates/kustomization.yaml
@@ -1,16 +1,16 @@
 resources:
 - ../../../../../components/certificates/base
 
-#patches:
-#  - patch: |-
-#      - op: replace
-#        path: /spec/servingCerts/namedCertificates/0/names/0
-#        value: api.hub.lab.local
-#    target:
-#      group: config.openshift.io
-#      kind: APIServer
-#      name: cluster
 patches:
+  - patch: |-
+      - op: replace
+        path: /spec/servingCerts/namedCertificates/0/names/0
+        value: api.hub.lab.local
+    target:
+      group: config.openshift.io
+      kind: APIServer
+      name: cluster
+#patches:
   - patch: |-
       - op: replace
         path: /spec/dnsNames
