--- a/clusters/overlays/local.home/components/certificates/kustomization.yaml
+++ b/clusters/overlays/local.home/components/certificates/kustomization.yaml
@@ -5,7 +5,7 @@ patches:
   - patch: |-
       - op: replace
         path: /spec/servingCerts/namedCertificates/0/names/0
-        value: api.home.ocplab.com
+        value: api.spoke5.lab.local
     target:
       group: config.openshift.io
       kind: APIServer
@@ -14,7 +14,7 @@ patches:
       - op: replace
         path: /spec/dnsNames
         value:
-          - api.home.ocplab.com
+          - api.spoke5.lab.local
     target:
       kind: Certificate
       name: openshift-api
@@ -22,10 +22,10 @@ patches:
       - op: replace
         path: /spec/dnsNames
         value:
-          - '*.apps.home.ocplab.com'
+          - '*.apps.spoke5.lab.local'
       - op: replace
         path: /spec/commonName
-        value: '*.apps.home.ocplab.com'
+        value: '*.apps.spoke5.lab.local'
     target:
       kind: Certificate
       name: openshift-wildcard
