--- a/bootstrap/overlays/local.home/values.yaml
+++ b/bootstrap/overlays/local.home/values.yaml
@@ -84,6 +84,7 @@ applications:
       path: clusters/overlays/local.home/components/consolelinks
 
   certificates:
+    enabled: false
     annotations:
       argocd.argoproj.io/sync-wave: "3"
     destination:
