--- a/clusters/overlays/local.hub/components/sso/kustomization.yaml
+++ b/clusters/overlays/local.hub/components/sso/kustomization.yaml
@@ -8,41 +8,41 @@ components:
 #- ../sso
 - ../../../../../components/oauth/overlays/htpass
 
-patches:
-  - patch: |-
-      - op: add
-        path: /spec/identityProviders/-
-        value:
-          name: keycloak
-          mappingMethod: claim
-          type: OpenID
-          openID:
-            clientID: ocp-hub-client
-            clientSecret:
-              name: oidc-client-secret
-            ca:
-              name: router-certs-default
-            extraScopes:
-            - email
-            - profile
-            extraAuthorizeParameters:
-              include_granted_scopes: "true"
-            claims:
-              preferredUsername:
-              - preferred_username
-              - email
-              name:
-              - nickname
-              - given_name
-              - name
-              email:
-              - custom_email_claim
-              - email
-              groups:
-              - groups
-            issuer: https://keycloak-sso.${SUB_DOMAIN}/auth/realms/myorg
-    target:
-      group: config.openshift.io
-      kind: OAuth
-      name: cluster
-      version: v1
+#patches:
+#  - patch: |-
+#      - op: add
+#        path: /spec/identityProviders/-
+#        value:
+#          name: keycloak
+#          mappingMethod: claim
+#          type: OpenID
+#          openID:
+#            clientID: ocp-hub-client
+#            clientSecret:
+#              name: oidc-client-secret
+#            ca:
+#              name: router-certs-default
+#            extraScopes:
+#            - email
+#            - profile
+#            extraAuthorizeParameters:
+#              include_granted_scopes: "true"
+#            claims:
+#              preferredUsername:
+#              - preferred_username
+#              - email
+#              name:
+#              - nickname
+#              - given_name
+#              - name
+#              email:
+#              - custom_email_claim
+#              - email
+#              groups:
+#              - groups
+#            issuer: https://keycloak-sso.${SUB_DOMAIN}/auth/realms/myorg
+#    target:
+#      group: config.openshift.io
+#      kind: OAuth
+#      name: cluster
+#      version: v1
