--- a/components/odf-operator/operator/overlays/no-registry/kustomization.yaml
+++ b/components/odf-operator/operator/overlays/no-registry/kustomization.yaml
@@ -13,6 +13,9 @@ patches:
       - op: replace
         path: /spec/channel
         value: stable-4.15
+      - op: replace
+        path: /sepc/version
+        value: 4.15.19-rhodf
     target:
       kind: Subscription
       name: odf-operator
