--- a/components/odf-operator/operator/overlays/no-registry/kustomization.yaml
+++ b/components/odf-operator/operator/overlays/no-registry/kustomization.yaml
@@ -1,5 +1,11 @@
+---
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+namespace: openshift-storage
+
 resources:
-- github.com/redhat-cop/gitops-catalog/openshift-data-foundation-operator/operator/overlays/stable-4.15
+- github.com/redhat-cop/gitops-catalog/openshift-data-foundation-operator/operator/base
 
 patches:
   - patch: |-
@@ -13,9 +19,13 @@ patches:
       - op: replace
         path: /spec/channel
         value: stable-4.15
+    target:
+      kind: Subscription
+      name: odf-operator
+  - patch: |-
       - op: replace
-        path: /spec/version
-        value: 4.15.19-rhodf
+       path: /spec/version
+       value: 4.15.19-rhodf
     target:
       kind: Subscription
       name: odf-operator
