--- a/components/odf-operator/operator/overlays/no-registry/kustomization.yaml
+++ b/components/odf-operator/operator/overlays/no-registry/kustomization.yaml
@@ -29,10 +29,10 @@ patches:
   #  target:
   #    kind: Subscription
   #    name: odf-operator
-  - patch: |-
-      - op: replace
-        path: /spec
-        value: {}
-    target:
-      kind: OperatorGroup
-      name: openshift-storage
+  #- patch: |-
+  #    - op: replace
+  #      path: /spec
+  #      value: {}
+  #  target:
+  #    kind: OperatorGroup
+  #    name: openshift-storage
