create odf instance 1

--- a/components/odf-operator/instance/base/kustomization.yaml
+++ b/components/odf-operator/instance/base/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-- storage-cluster.yaml
+#- storage-cluster.yaml
 - storage-system.yaml
-- noobaa-default-backing-store.yaml
+#- noobaa-default-backing-store.yaml
